fix: resolve all bugs across backend and frontend